Removed transcript padding and fixed transcript line spacing. Added max size for audio elements so as to be able to download the audios effectively. Added authors. Fixed diagram to be of a higher quality svg conversion.

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -51,7 +51,9 @@ summary {
  * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
  */
 
-audio,
+audio{
+  max-width: 150px;
+}
 canvas,
 progress,
 video {
